[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio-cron-scheduler = "0.9"

[dev-dependencies]
actix-rt = "2"